--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 // Grab elements, create settings, etc.
         var video = document.getElementById('video');
         const constraints = {
-            video: {width: {min: 640}, height: {min: 480}}
+            video:true
             
         }
 
