--- a/index.html
+++ b/index.html
@@ -12,41 +12,6 @@
     }
 
 
-    .fileContainer {
-    overflow: hidden;
-    position: relative;
-}
-
-.fileContainer [type=file] {
-    cursor: inherit;
-    display: block;
-    font-size: 999px;
-    filter: alpha(opacity=0);
-    min-height: 100%;
-    min-width: 100%;
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    text-align: right;
-    top: 0;
-}
-
-/* Example stylistic flourishes */
-
-.fileContainer {
-    background: #2532a0;
-    border-radius: .5em;
-    float: left;
-    padding: .5em;
-    color:#ffffff;
-}
-
-.fileContainer [type=file] {
-    cursor: pointer;
-}
-
-
-
 </style>
 </head>
 <body>
@@ -63,9 +28,10 @@
     <div class="w3-third w3-section w3-cell">
         <div class="w3-card-4">
         <!--<canvas id="canvas" style="width:100%; background:#000000;"></canvas> -->
-        <video id="video" autoplay></video>
+        <video id="video" autoplay style="width:100%"></video>
         <div class="w3-container w3-white">
         <h4>Passport Image</h4>
+         <button id="snap" class="w3-bar-item w3-button w3-black">Take Picture</button>
 
         <p id="waiting"><span><i class="w3-large fa fa-paperclip"></i> Waiting for image to process...</span></p>
         <p id="processing"><span><i class="w3-large w3-spin fa fa-refresh"></i> Processing...</span></p>
@@ -130,18 +96,9 @@
         
 
         //Trigger image from file
-        /*document.getElementById("filesnap").addEventListener("change", function(e){
-            console.log("File Selected!!");
-            console.log(e.target.files[0]);
-
-            var file = e.target.files[0];
-            var fr = new FileReader();
-
-            if(file != undefined && fr != undefined){
-                fr.onload = createImageFromFile;
-                fr.readAsDataURL(file);
-            }else console.log("Either file is empty or filereader is not supported by this browser.")
-        });*/
+        document.getElementById("snap").addEventListener("click", function(e){
+           
+        });
 
         // Process Image
         function processImage()
