--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         {
               
             
-            const api_url = "http://ogawa.ucgroup.sg/passscan/api.php";
+            const api_url = "https://orderdemo.ucgroup.sg/passscan/api.php";
             const data = { card_type:1, scan_image_base64: convertedImg};
 
             $("#waiting").hide();
