--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         var video = document.getElementById('video');
         var canvas = document.getElementById('canvas');
         const constraints = {
-            video: { facingMode: 'environment' }            
+            video: { facingMode: 'environment', width: {min: 1280}, height: {min: 720} }            
         }
 
         // Get access to the camera!
@@ -152,7 +152,7 @@
 
         function captureFrame()
         {
-            canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
+            canvas.getContext('2d').drawImage(video, 0, 0, c.width, canvas.height);
             const imgx = canvas.toDataURL("image/png");
             console.log("Frame captured.. Now Processing..");
 
