--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <div class="w3-third w3-section w3-cell">
         <div class="w3-card-4">
-        <video id="video" autoplay style="width:100%"></video>
-        <canvas id="canvas" style="width:100%; background:#000000;"></canvas>
+        <video id="video" autoplay style="width:100%, height:720px;"></video>
+        <canvas id="canvas" style="width:100%; height:720px, background:#000000;"></canvas>
         <div class="w3-container w3-white">
         <h4>Passport Image</h4>
          <button id="snap" class="w3-bar-item w3-button w3-black">Take Picture</button>
