--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
     </div>
 
 
+
+    <div class="w3-display-container">
+    <canvas id="canvas" class="w3-padding w3-display-middle" style="width:1280px; height:720px; display:none;"></canvas>
+
     <div class="w3-row-padding w3-theme">
 
 
     <div class="w3-third w3-section w3-cell">
         <div class="w3-card-4">
-        <video id="video" autoplay style="width:100%, height:720px;"></video>
-        <canvas id="canvas" style="width:100%; height:720px, background:#000000;"></canvas>
+        <video id="video" autoplay style="width:100%"></video>
         <div class="w3-container w3-white">
         <h4>Passport Image</h4>
          <button id="snap" class="w3-bar-item w3-button w3-black">Take Picture</button>
@@ -76,7 +79,7 @@
         var video = document.getElementById('video');
         var canvas = document.getElementById('canvas');
         const constraints = {
-            video: { facingMode: 'environment', width: {min: 1280}, height: {min: 720} }            
+            video: { facingMode: 'environment' }            
         }
 
         // Get access to the camera!
@@ -152,8 +155,10 @@
 
         function captureFrame()
         {
+            $("#canvas").show();
             canvas.getContext('2d').drawImage(video, 0, 0, canvas.width, canvas.height);
             const imgx = canvas.toDataURL("image/png");
+            $("#canvas").hide();
             console.log("Frame captured.. Now Processing..");
 
             processImage(imgx);
@@ -175,5 +180,7 @@
         });
     
     </script>
+
+    </div>
 </body>
 </html> 
