--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         // Now write data
                         const dx = data.data[0];
                         $("#dtype").text(dx.document_type);
-                        $("#pname).text(dx.given_names);
+                        $("#pname").text(dx.given_names);
                         $("#psname").text(dx.surname);
                         $("#pdn").text(dx.document_no);
                         
