--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
             <tr>
             <td>Date Of Birth</td>
-            <td id="pdob"></td>
+            <td id="pdoe"></td>
             </tr>
             
              <tr>
